# Crypto-Price-Sonifier

./: Cargo.toml  README.md
src/: main.rs
