[package]
name = "eth-price-sonifier"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.17"
chrono = "0.4"
rand = "0.8"
eframe = "0.26.2"
egui = "0.26.2"
egui_plot = "0.26.2"
image = "0.24"
